[gd_scene load_steps=5 format=3 uid="uid://0k0tpsfqof2s"]

[ext_resource type="Theme" uid="uid://cfawl7b2vkeh" path="res://addons/GoLogger/Resources/BaseTheme.tres" id="1_y5prw"]
[ext_resource type="Script" path="res://addons/GoLogger/Dock/GoLoggerDock.gd" id="2_qhfb3"]
[ext_resource type="PackedScene" uid="uid://bsjs2nwxyiflf" path="res://addons/GoLogger/Dock/ToolTip.tscn" id="5_r16qc"]

[sub_resource type="LabelSettings" id="LabelSettings_6l1k1"]
line_spacing = -5.0
font_size = 12

[node name="GoLoggerDock" type="TabContainer"]
custom_minimum_size = Vector2(192, 231)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.215
offset_top = 1.0
offset_bottom = -0.199997
grow_horizontal = 2
grow_vertical = 2
current_tab = 1
script = ExtResource("2_qhfb3")

[node name="Categories" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Categories"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Categories/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="Categories/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1890, 41)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Categories/MarginContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Categories/MarginContainer/VBoxContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="OpenDirButton" type="Button" parent="Categories/MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
modulate = Color(1, 0.67451, 0.25098, 1)
layout_mode = 2
text = "Open Directory Folder"

[node name="DefaultsButton" type="Button" parent="Categories/MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
modulate = Color(1, 0.34902, 0.34902, 1)
layout_mode = 2
text = "Reset to Default "

[node name="Label" type="Label" parent="Categories/MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
text = "Press enter to submit a name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Categories/MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
modulate = Color(1, 0.26, 0.26, 1)
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
text = "                Unnamed/unapplied categories will not be used"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Categories/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="AddButton" type="Button" parent="Categories/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 111)
layout_mode = 2
text = "+"

[node name="GridContainer" type="GridContainer" parent="Categories/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 5
columns = 8

[node name="Label" type="Label" parent="Categories/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Current .ini setting(size = 2):
      [[\"game1\", 0, false], [\"player1\", 1, false]]
Current GridContainer.get_children()[size = 2]:
      [Panel:<Panel#1846332685425>, @Panel@17348:<Panel#1846752115849>]"

[node name="Settings" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
follow_focus = true
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="Settings/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/Panel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
offset_right = 1999.0
offset_bottom = 200.0
theme_override_constants/separation = 26

[node name="ColumnA" type="MarginContainer" parent="Settings/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_y5prw")
theme_override_constants/separation = 4

[node name="BaseDirLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "Base Directory"
horizontal_alignment = 1

[node name="BaseDirLineEdit" type="LineEdit" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox"]
custom_minimum_size = Vector2(198, 35)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "user://GoLogger/"
placeholder_text = "user://logs/"
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="ApplyButton" type="Button" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/HBoxContainer2"]
modulate = Color(0.46148, 0.83, 0.2324, 1)
layout_mode = 2
text = "Apply"

[node name="OpenDirButton" type="Button" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/HBoxContainer2"]
modulate = Color(1, 0.675, 0.25, 1)
layout_mode = 2
text = "Open Directory Folder"

[node name="ResetButton" type="Button" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/HBoxContainer2"]
self_modulate = Color(1, 0.35, 0.35, 1)
layout_mode = 2
text = "Reset"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ToolTip" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox" instance=ExtResource("5_r16qc")]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2

[node name="MarginContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/ToolTip" index="0"]
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/ToolTip/MarginContainer" index="0"]
custom_minimum_size = Vector2(0, 57)
label_settings = SubResource("LabelSettings_6l1k1")

[node name="MarginContainer" type="MarginContainer" parent="Settings/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 310

[node name="LogHeaderLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "  Log Header"
vertical_alignment = 1

[node name="LogHeaderOptButton" type="OptionButton" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme = ExtResource("1_y5prw")
alignment = 2
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Project Name & Version"
popup/item_1/text = "Project Name"
popup/item_1/id = 1
popup/item_2/text = "Version"
popup/item_2/id = 2

[node name="AutostartCheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "Autostart session"

[node name="UTCCheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "Use UTC time"

[node name="SeparatorCheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "Use - separator in timestamps"

[node name="ColumnB" type="MarginContainer" parent="Settings/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LimitMethodLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Limit method:"

[node name="LimitMethodOptButton" type="OptionButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
alignment = 2
selected = 2
allow_reselect = true
item_count = 3
popup/item_0/text = "Entry Count"
popup/item_1/text = "SessionTimer"
popup/item_1/id = 1
popup/item_2/text = "EntryCount + SessionTimer"
popup/item_2/id = 2

[node name="HSplitContainer2" type="HSplitContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer"]
layout_mode = 2
split_offset = 109

[node name="LimitActionLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Limit action:"
vertical_alignment = 1

[node name="LimitActionOptButton" type="OptionButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer2"]
layout_mode = 2
alignment = 2
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Stop & Start new session"
popup/item_1/text = "Stop session"
popup/item_1/id = 1

[node name="HSplitContainer3" type="HSplitContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer"]
layout_mode = 2
split_offset = 190

[node name="FileCountLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "File count limit: "
vertical_alignment = 1

[node name="FileCountSpinBox" type="SpinBox" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
min_value = 5.0
max_value = 30.0
value = 10.0
alignment = 2
update_on_text_changed = true
custom_arrow_step = 1.0

[node name="HSplitContainer4" type="HSplitContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer"]
layout_mode = 2
split_offset = 190

[node name="EntryCountLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer4"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Entry count limit: "
vertical_alignment = 1

[node name="EntryCountSpinBox" type="SpinBox" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer4"]
layout_mode = 2
min_value = 100.0
max_value = 5000.0
value = 1000.0
alignment = 2
update_on_text_changed = true

[node name="HSplitContainer5" type="HSplitContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer"]
layout_mode = 2
split_offset = 190

[node name="SessionDuration" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer5"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Session duration"
vertical_alignment = 1

[node name="SessionDuration2" type="SpinBox" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnB/HBoxContainer/VBoxContainer/HSplitContainer5"]
layout_mode = 2
min_value = 20.0
max_value = 1200.0
value = 600.0
alignment = 2
update_on_text_changed = true
suffix = "sec"
custom_arrow_step = 1.0
select_all_on_focus = true

[node name="ColumnC" type="MarginContainer" parent="Settings/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="CanvasLayerLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = " CanvasLayer layer:"
vertical_alignment = 1

[node name="DragOffsetLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = " Controller dragging offset:"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CanvasLayerSpinBox" type="SpinBox" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
value = 5.0
alignment = 2
update_on_text_changed = true

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="XLineEdit" type="SpinBox" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(0.96, 0.34944, 0.2688, 1)
layout_mode = 2
alignment = 2
prefix = "x:"

[node name="YLineEdit" type="SpinBox" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(0.4606, 0.98, 0.64239, 1)
layout_mode = 2
alignment = 2
prefix = "y:"

[node name="ShowOnStartCheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer"]
layout_mode = 2
text = "Show Controller on start:"
icon_alignment = 2

[node name="MonitorSideCheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnC/VBoxContainer"]
layout_mode = 2
text = "Controller LogFile Monitor side:"
icon_alignment = 2

[node name="ColumnD" type="MarginContainer" parent="Settings/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Column" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="ErrorRepLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Error reporting"
vertical_alignment = 1

[node name="SessionChangeLabel" type="Label" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Print session changes:"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column/HBoxContainer"]
layout_mode = 2

[node name="ErrorRepOptButton" type="OptionButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "All"
popup/item_1/text = "Only Warnings"
popup/item_1/id = 1
popup/item_2/text = "None"
popup/item_2/id = 2

[node name="SessionChangeOptButton" type="OptionButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2
selected = 0
allow_reselect = true
item_count = 5
popup/item_0/text = "None"
popup/item_1/text = "Start, Copy & Stop session"
popup/item_1/id = 1
popup/item_2/text = "Start session only"
popup/item_2/id = 2
popup/item_3/text = "Copy session only"
popup/item_3/id = 3
popup/item_4/text = "Stop session only"
popup/item_4/id = 4

[node name="DisableWarn1CheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "Disable warning:
\"Failed to start session, no active session\":         "

[node name="DisableWarn2CheckButton" type="CheckButton" parent="Settings/MarginContainer/Panel/HBoxContainer/ColumnD/Column"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_y5prw")
text = "Disable warning:
\"No active session, failed to log entry\":                "

[editable path="Settings/MarginContainer/Panel/HBoxContainer/ColumnA/VBox/ToolTip"]
